--- a/locales/en.json
+++ b/locales/en.json
@@ -1,16 +1,22 @@
 {
-	"headerh1": "Hotel Lodge House Seasons",
-	"Home": "Home",
-	"Booking": "Booking",
-	"Gallery": "Gallery",
-	"Rates": "Rates",
-	"Location": "Location",
-	"Contact": "Contact",
-	"Language": "Language",
+	"headerh1": "hotel lodge house seasons",
+	"home": "home",
+	"booking": "booking",
+	"gallery": "gallery",
+	"rates": "rates",
+	"location": "location",
+	"contact": "contact",
+	"language": "language",
 	"ratestblth1": "Number of Guests",
 	"ratestblth2": "October to May",
 	"ratestblth3": "June and Sep­tember",
 	"ratestblth4": "July and August",
 	"upto": "up to",
-	"euros": "euros"
+	"euros": "euros",
+	"your" : "your",
+	"name" : "name",
+	"email": "email",
+	"subject": "subject",
+	"message": "message",
+	"required": "required"
 }
