--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,6 @@
         Breakfast, Lunch and Dinner at Seasons Lodge House are tailored to suit the individual needs of each guest (ordered in advanced).<br>
         Discounts are available for renting the whole guest house.<br>
         Children under the age of 4 are free of charge.",
-        "":"We value your feedback, both good and not-so-good. Hopefully you will not need to send us any of the latter but, if you do have any cause for complaint, please do not hesitate to contact us - your comments are important to us and will help us improve our service to you and other customers."
-        "contactmaindesc": "If you would like to make any bookings or general enquiries please use the form below and a member of our friendly staff will get back to you (usually within 2 working days).
+        "contactmaindesc":"We value your feedback, both good and not-so-good. Hopefully you will not need to send us any of the latter but, if you do have any cause for complaint, please do not hesitate to contact us - your comments are important to us and will help us improve our service to you and other customers."
+        "bookingmaindesc": "If you would like to make any bookings or general enquiries please use the form below and a member of our friendly staff will get back to you (usually within 2 working days).
 }
