--- a/locales/en.json
+++ b/locales/en.json
@@ -31,7 +31,16 @@
     We try our very best to make sure our customers stay is as comfortable and convienient as possible.",
     	"homebooking": "We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance.
          Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days.",
-	"": "", 
+	"homegallery": "All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. 
+            Each individually designed flat has been created with an emphasis on supreme comfort and relaxation.",
+        "homeprices": "Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price.
+            All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time.",
+        "homelocation": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind.
+            We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik.",
+	 "homeblog": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind.
+            We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik.",
+	"homecontact": "To arrange a convenient time to view the flats, make a booking or for any other query, contact us. From time to time we ask our customers for their comments on their experiences in dealing with us,
+        “how they felt they were treated” and “how can we improve our methods and services”. Please do not hesitate us and drop us a line. Your feedback is always much appreciated.",
 	"ratesonebedroomflatth":"Price per night for a flat",
 	"ratesstandaloneflatth":"Price per night for a standalone flat",
 	"ratesmaindesc": "Seasons Lodge Guest House is a place dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible.
