--- a/locales/en.json
+++ b/locales/en.json
@@ -1,25 +1,32 @@
 {
-	"headerh1": "hotel lodge house seasons",
-	"home": "home",
-	"booking": "booking",
-	"gallery": "gallery",
-	"rates": "rates",
-	"location": "location",
-	"contact": "contact",
-	"language": "language",
+	"headerh1": "Hotel Lodge House Seasons",
+	"home": "Home",
+	"booking": "Booking",
+	"gallery": "Gallery",
+	"rates": "Rates",
+	"location": "Location",
+	"contact": "Contact",
+	"language": "Language",
 	"ratestblth1": "Number of Guests",
 	"ratestblth2": "October to May",
 	"ratestblth3": "June and Sep­tember",
 	"ratestblth4": "July and August",
 	"upto": "up to",
-	"euros": "euros",
-	"your": "your",
-	"name": "name",
-	"email": "email",
-	"subject": "subject",
-	"message": "message",
+	"euros": "Euros",
+	"your": "Your",
+	"name": "Name",
+	"email": "Email",
+	"subject": "Subject",
+	"message": "Message",
 	"required": "required",
-	"prices": "prices",
+	"prices": "Prices",
+	"exteriorinteriorphotos": "Exterior and Interior Photos",
+	"diningareaphotos","Dining Area Photos",
+	"flat1photos", "First Floor Flat Photos",
+	"flat2photos", "Second Floor Flat Photos",
+	"flat3photos", "Third Floor Flat Photos",
+	"flat4photos", "Standalone Flat Photos",
+	"gallerymaindesc": "Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. Each flat occupies its own floor and has a private bathrooms with shower and toilet facilities. There is a lovely garden located at the rear of a property which features extensive lawn, wooden decking patio and barbeque area. Dining area on underground floor provides seating for up to 30 guest around oak tables in a friendly relaxed atmosphere.",
 	"homemaindesc": " The Seasons Lodge Guest House is one of the finest three stars hotels on the east coast of Bulgaria.
 	 The hotel is located on the edge of Albena in an old fishing village of Golden Fish. Golden Fish village is quiet residential area within a short 
     distance of the Albena centre and is only a stone throw away from the beach. It offers 4 comfortable air-conditioned flats with sea views.
