--- a/locales/en.json
+++ b/locales/en.json
@@ -7,6 +7,7 @@
 	"location": "Location",
 	"contact": "Contact",
 	"language": "Language",
+	"back": "Back",
 	"ratestblth1": "Number of Guests",
 	"ratestblth2": "October to May",
 	"ratestblth3": "June and Sep­tember",
