--- a/locales/en.json
+++ b/locales/en.json
@@ -44,7 +44,9 @@
 	"messagesentsuccessfully" : "Message sent successfully.",
 	"deliveryfailure": "Delivery failure.",
 	"suggestaroute": "Suggest a Route", 
-	"returntotheoriginalmap","Return to the Original Map",
+	"returntotheoriginalmap": "Return to the Original Map",
+	"selectareservationstartdate": "Select a reservation start date",
+	"selectaduarationindays": "Select a duaration in days",
 	"homemaindesc": "The Seasons Lodge Guest House is one of the finest three stars hotels on the east coast of Bulgaria. The hotel is located on the edge of Albena in an old fishing village of Golden Fish. Golden Fish village is quiet residential area within a short distance of the Albena centre and is only a stone throw away from the beach. It offers 4 comfortable air-conditioned flats with sea views. Being a privately owned and family run hotel allows us to make sure our residents and guests will always be treated as individuals and with respect, as we would like to be treated ourselves. We have a very good working relationship with many local businesses and private individuals alike so we can always assist wherever possible. The friendly family atmosphere that our customers experience is always warmly welcomed as is the good advice that is given with a smile. We try our very best to make sure our customers stay is as comfortable and convienient as possible.",
   	"homebooking": "We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance. Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days",
 	"homegallery": "All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. Each individually designed flat has been created with an emphasis on supreme comfort and relaxation",
