Added booking page.

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
 	"home": "Home",
 	"booking": "Booking",
 	"gallery": "Gallery",
+	"services": "Services",
 	"rates": "Rates",
 	"location": "Location",
 	"contact": "Contact",
@@ -14,14 +15,14 @@
 	"ratestblth3": "June and Sep­tember",
 	"ratestblth4": "July and August",
 	"upto": "up to",
-	"euros": "Euros",
+	"euros": "euros",
 	"your": "Your",
 	"name": "Name",
 	"email": "Email",
 	"subject": "Subject",
 	"message": "Message",
 	"required": "required",
-	"prices": "Prices",
+	"prices": "prices",
 	"exteriorinteriorphotos": "Exterior and Interior Photos",
 	"diningareaphotos": "Dining Area Photos",
 	"flat1photos": "First Floor Flat Photos",
@@ -29,37 +30,36 @@
 	"flat3photos": "Third Floor Flat Photos",
 	"flat4photos": "Standalone Flat Photos",
 	"gallerymaindesc": "Our 4 flats are clean, comfortable and good value. They all offer 1 king size bed, 2 single beds and 1 convertible bed couch, freeview television, air conditioning system, fridge and free wireless internet connection. Each flat occupies its own floor and has a private bathrooms with shower and toilet facilities. There is a lovely garden located at the rear of a property which features extensive lawn, wooden decking patio and barbeque area. Dining area on underground floor provides seating for up to 30 guest around oak tables in a friendly relaxed atmosphere.",
-	"euros": "euros",
 	"yourname": "your name",
-	"name": "Name",
 	"youremail": "your email",
-	"subject": "Subject",
 	"yourmessage": "your message",
 	"selectaflat": "Select a flat",
-	"required": "required",
-	"prices": "prices",
 	"___readmore": " ... read more",
 	"sending___": "sending...",
 	"OK": "OK",
-	"messagesentsuccessfully" : "Message sent successfully.",
+	"messagesentsuccessfully": "Message sent successfully.",
 	"deliveryfailure": "Delivery failure.",
-	"suggestaroute": "Suggest a Route", 
+	"suggestaroute": "Suggest a Route",
 	"returntotheoriginalmap": "Return to the Original Map",
 	"selectareservationstartdate": "Select a reservation start date",
 	"selectaduarationindays": "Select a duaration in days",
 	"homemaindesc": "The Seasons Lodge Guest House is one of the finest three stars hotels on the east coast of Bulgaria. The hotel is located on the edge of Albena in an old fishing village of Golden Fish. Golden Fish village is quiet residential area within a short distance of the Albena centre and is only a stone throw away from the beach. It offers 4 comfortable air-conditioned flats with sea views. Being a privately owned and family run hotel allows us to make sure our residents and guests will always be treated as individuals and with respect, as we would like to be treated ourselves. We have a very good working relationship with many local businesses and private individuals alike so we can always assist wherever possible. The friendly family atmosphere that our customers experience is always warmly welcomed as is the good advice that is given with a smile. We try our very best to make sure our customers stay is as comfortable and convienient as possible.",
-  	"homebooking": "We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance. Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days",
+	"homebooking": "We know reservation can be a hassle, so let us help you with it. Take advantage our online reservation service to check flats avaiability and book in advance. Upon booking you may request refreshments / buffets and indicate your preferred room layout. Our reservation team will check if there are flats available on your chosen dates and get back to you within two business days",
 	"homegallery": "All 4 flats are decorated in a truly elegant Bulgarian style and offer a wonderful views of the Black sea. Due to the unique nature of House Season guest house, each flat has a personality of its own and no two are alike. Each individually designed flat has been created with an emphasis on supreme comfort and relaxation",
-        "homeprices": "Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time",
-        "homelocation": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
+	"homeprices": "Looking for a nice and affordable hotel in Bulgaria? Look no further! Season Lodge Guest House has always prided itself on being a clean and comfortable hotel on the edge of Albena Resort that is high on quality, but not high on price. All requests will be met where possible and rooms set-up before your arrival to ensure you make the most of your booking time",
+	"homelocation": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
 	"homeblog": "Set on a secluded private estate at the foot of a chain of lush green hills and overlooking a pristine white sand beach, our location is ideal for those who simply want to chill out while renewing body and mind. We are located within 10 minutes walking distance from the beach on the north edge of Albena Resort, in the lovely Golden Fish Area six miles from the historic and ancient City of Balchik",
 	"homecontact": "To arrange a convenient time to view the flats, make a booking or for any other query, contact us. From time to time we ask our customers for their comments on their experiences in dealing with us, 'how they felt they were treated' and 'how can we improve our methods and services'. Please do not hesitate us and drop us a line. Your feedback is always much appreciated",
 	"ratesonebedroomflatth": "Price per night for a flat",
 	"ratesstandaloneflatth": "Price per night for a standalone flat",
 	"ratesmaindesc": "Seasons Lodge Guest House is a place dedicated to offering you great value and quality services. With this in mind, all of our members strive to make the guest experience as individual, hospitable and affordable as possible. Upon booking you may request refreshments / buffets (additional charges apply) and indicate your preferred flat. All requests will be met where possible and flats set-up before your arrival to ensure you make the most of your booking time. All prices include VAT (20% Value Added Tax).",
-        "ratesextrainfo": "* Extra person is at additional charge of 10 Euros per person per night. Maximum 2 additional adults is allowed. <br> ** Access to kitchen facilities (for an additional charge of 5 Euros per night).<br> Breakfast, Lunch and Dinner at Seasons Lodge House are tailored to suit the individual needs of each guest (ordered in advanced).<br> Discounts are available for renting the whole guest house.<br> Children under the age of 4 are free of charge.",
-        "contactmaindesc":"To arrange a convenient time to view the flats, make a booking or for any other query, please use the form provided below and a member of our friendly staff will get back to you (usually within 2 working days).<br> We value your feedback, both good and not-so-good. Hopefully you will not need to send us any of the latter but, if you do have any cause for complaint, please do not hesitate to contact us - your comments are important to us and will help us improve our service to you and other customers.",
-        "bookingmaindesc": "If you would like to make any bookings or general enquiries please use the form below and a member of our friendly staff will get back to you (usually within 2 working days). Reservations are accepted by phone anytime before the first day of the rental. It is particularly important to make a reservation for offsite rentals, as there are limited quantities of the equipment available. Requests made for offsites after 11:00 am generally cannot be set up until the next day.",
-        "locationtmaindesc": "Staff are available to arrange pick-up services, ticket bookings and assist with postal needs. Please arrange this service while booking the accommodation. Transport and transfer service is subject to additional charge. You can use the google map widget to get a better understanding of the exact location. Driving Route Planner is also included.",
-        "servicesmaindesc": "Don't want another summer of dragging your umbrella and chairs back and forth across the hot sand?  Can we do the next beach replenishment from the back seat of your car?  Try something different this year and rent your umbrella and chairs from our beach attendants. Our staff will set your equipment at the start of the day and break it down when you're finished for the day.  You'll relax in style in our comfortable chairs under a nice cool umbrella. No muss, no fuss! Chairs and umbrellas are available for use daily at 10 a.m. Available only for the summer season.</br>Staff are available to arrange pick-up services, getting on and off the beach, ticket bookings and assist with postal needs. We also provide freshly prepared home cooked meals across breakfast, lunch and dinner service. This service is available on demand and must be requested in advance. There is no menu, so you should just ask what would you prefer. All requests will be met where possible. All services are subject to additional charge."
+	"ratesextrainfo": "* Extra person is at additional charge of 10 Euros per person per night. Maximum 2 additional adults is allowed. <br> ** Access to kitchen facilities (for an additional charge of 5 Euros per night).<br> Breakfast, Lunch and Dinner at Seasons Lodge House are tailored to suit the individual needs of each guest (ordered in advanced).<br> Discounts are available for renting the whole guest house.<br> Children under the age of 4 are free of charge.",
+	"contactmaindesc": "To arrange a convenient time to view the flats, make a booking or for any other query, please use the form provided below and a member of our friendly staff will get back to you (usually within 2 working days).<br> We value your feedback, both good and not-so-good. Hopefully you will not need to send us any of the latter but, if you do have any cause for complaint, please do not hesitate to contact us - your comments are important to us and will help us improve our service to you and other customers.",
+	"bookingmaindesc": "If you would like to make any bookings or general enquiries please use the form below and a member of our friendly staff will get back to you (usually within 2 working days). Reservations are accepted by phone anytime before the first day of the rental. It is particularly important to make a reservation for offsite rentals, as there are limited quantities of the equipment available. Requests made for offsites after 11:00 am generally cannot be set up until the next day.",
+	"locationtmaindesc": "Staff are available to arrange pick-up services, ticket bookings and assist with postal needs. Please arrange this service while booking the accommodation. Transport and transfer service is subject to additional charge. You can use the google map widget to get a better understanding of the exact location. Driving Route Planner is also included.",
+	"servicesmaindesc": "Don't want another summer of dragging your umbrella and chairs back and forth across the hot sand?  Can we do the next beach replenishment from the back seat of your car?  Try something different this year and rent your umbrella and chairs from our beach attendants. Our staff will set your equipment at the start of the day and break it down when you're finished for the day.  You'll relax in style in our comfortable chairs under a nice cool umbrella. No muss, no fuss! Chairs and umbrellas are available for use daily at 10 a.m. Available only for the summer season.</br>Staff are available to arrange pick-up services, getting on and off the beach, ticket bookings and assist with postal needs. We also provide freshly prepared home cooked meals across breakfast, lunch and dinner service. This service is available on demand and must be requested in advance. There is no menu, so you should just ask what would you prefer. All requests will be met where possible. All services are subject to additional charge.",
+	"blog": "blog",
+	"Subject": "Subject",
+	"sending__": "sending__",
+	"flat": "flat"
 }
